<resources>
    <string name="app_name">Calculator</string>
    <string name="math_puzzle_game">Math Puzzle Game</string>
    <string name="start">Start</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="register">Don\'t have an account? Register</string>
    <string name="zero">0</string>
    <string name="ac">AC</string>
    <string name="persent">%</string>
    <string name="devide">/</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="mul">*</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="minus">-</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="plus">+</string>
    <string name="dot">.</string>
    <string name="equals">=</string>
    <string name="backspace">bc</string>
    <string name="pi">pi</string>
</resources>