<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#242530"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:id="@+id/input_console"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="@dimen/margin_standart"
            android:gravity="end"
            android:hint="@string/zero"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="32sp" />

        <TextView
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="@dimen/margin_standart"
            android:gravity="end"
            android:textColor="@color/white"
            android:textSize="40sp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical"
        android:padding="4dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_ac"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/shape"
                android:backgroundTint="#B2B2B2"
                android:text="@string/ac"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_backsapce"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/shape"
                android:backgroundTint="#B2B2B2"
                android:text="@string/backspace"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_percent"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/shape"
                android:backgroundTint="#B2B2B2"
                android:text="@string/persent"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_devide"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/shape"
                android:text="@string/devide"
                android:textColor="@color/white"
                android:textSize="25sp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_seven"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_below="@id/btn_ac"
                android:layout_weight="1"
                android:background="@drawable/shape"
                android:layout_margin="4dp"
                android:backgroundTint="#404258"
                android:text="@string/seven"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_eight"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_below="@id/btn_backsapce"
                android:layout_margin="4dp"
                android:layout_toEndOf="@id/btn_ac"
                android:layout_weight="1"
                android:background="@drawable/shape"
                android:backgroundTint="#404258"
                android:text="@string/eight"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_nine"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_below="@id/btn_backsapce"
                android:layout_toEndOf="@id/btn_backsapce"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/shape"
                android:backgroundTint="#404258"
                android:text="@string/nine"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_mul"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_below="@id/btn_backsapce"
                android:layout_toEndOf="@id/btn_percent"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/shape"
                android:text="*"
                android:textColor="@color/white"
                android:textSize="25sp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_four"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:layout_margin="4dp"
                android:background="@drawable/shape"
                android:backgroundTint="#404258"
                android:text="@string/four"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_five"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:layout_margin="4dp"
                android:background="@drawable/shape"
                android:backgroundTint="#404258"
                android:text="@string/five"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_six"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_below="@id/btn_seven"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/shape"
                android:backgroundTint="#404258"
                android:text="@string/six"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_minus"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_below="@id/btn_seven"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/shape"
                android:text="@string/minus"
                android:textColor="@color/white"
                android:textSize="25sp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_one"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:layout_margin="4dp"
                android:background="@drawable/shape"
                android:backgroundTint="#404258"
                android:text="@string/one"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_two"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_below="@id/btn_four"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:layout_toEndOf="@id/btn_four"
                android:background="@drawable/shape"
                android:backgroundTint="#404258"
                android:text="@string/two"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_three"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_below="@id/btn_four"
                android:layout_margin="4dp"
                android:layout_toEndOf="@id/btn_two"
                android:background="@drawable/shape"
                android:layout_weight="1"
                android:backgroundTint="#404258"
                android:text="@string/three"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_plus"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_below="@id/btn_four"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:layout_toEndOf="@id/btn_three"
                android:background="@drawable/shape"
                android:text="@string/plus"
                android:textColor="@color/white"
                android:textSize="25sp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_zero"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_below="@id/btn_one"
                android:layout_weight="2"
                android:layout_margin="4dp"
                android:backgroundTint="#404258"
                android:text="@string/zero"
                android:textColor="@color/white"
                android:textSize="25sp"
                app:cornerRadius="80dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_dot"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_margin="4dp"
                android:background="@drawable/shape"
                android:backgroundTint="#404258"
                android:layout_weight="1"
                android:text="@string/dot"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_equals"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/shape"
                android:text="@string/equals"
                android:textColor="@color/white"
                android:textSize="25sp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>